tehty tyhmää nettisivua

--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 <head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <title>Github page testi</title>
+ <title>Dokumentti</title>
  <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
- <h1>Github pages testi</h1>
+
+<body bgcolor='green'>
+
+ <h1>HTML-sivun rakenne sekä tagit</h1>
+ <p>HTML on www-sivujen rakennetta kuvaava merkintäkieli joka kuvaa dokumentit rakenteen. 
+     Rakenne kuvataan seuraavilla elementeillä:</div>
+ </p>
+ <div class="tagilista">
+<ul>
+     <li>HTML</li>
+     <li>HEAD</li>
+     <li>BODY</li>
+     <li>P</li>
+     <li>IMG</li>
+     <li>A</li>
+     <li>BR</li>
+     <li>H1 ja muut H-tagit</li>
+ </ul>
+ </div>
+ 
+
+
 </body>
 </html>
