--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body bgcolor='green'>
+<body style='background-color:lightblue;'>
 
  <h1>HTML-sivun rakenne sekä tagit</h1>
  <p>HTML on www-sivujen rakennetta kuvaava merkintäkieli joka kuvaa dokumentit rakenteen. 
@@ -25,7 +25,16 @@
      <li>H1 ja muut H-tagit</li>
  </ul>
  </div>
- 
+ <section>
+     <h2>HTML</h2>                                                          
+    HTML -tagi kuvaa HTML dokumentin juurta.
+    HTML tagi on runko kaikille muille html elementeille.
+ </section>
+ <section>
+     <h2>HEAD</h2>
+     HTML head elementti sisältää meta datan. Meta data tietoja ei näytetä.
+     HEAD elementti sijoitetaan html tagin ja body tagin väliin.
+ </section>
 
 
 </body>
