--- a/index2.html
+++ b/index2.html
@@ -6,9 +6,34 @@
         <title>damn</title>
         <link rel="stylesheet" href="css2/styles2.css">
     </head>
+    
     <body>
+        <section>
+            <div class="container">
+                <form class="form1">
+                    <div class=kontaktitiedot>Contact information:</div>
+                    <div class=kontaktimetodit>Preferred contact method:</div>
+                    <div class="form-group">
+                        <label for="First name:"> First name:</label>
+                        <input type="text" id="First name:" name="First name:">
+                    </div>   
 
+                    <div class="form-group">
+                        <label for="Last name:"> Last name:</label>
+                        <input type="text" id="Last name:" name="Last name:" style="margin-left: 2px;">
+                    </div>
 
+                    <div class="form-group">
+                        <label for="Email"> Email:</label>
+                        <input type="Email" id="Email" name="Email" style="margin-left: 30px;" >
+                    </div>
 
+                    <div class="form-group">
+                        <label for="telephone"> Telephone:</label>
+                        <input type="telephone" id="telephone" name="telephone" >
+                    </div>
+                </form>
+            </div>
+        </section>
     </body>
 </html>
